--- a/RESTfulExample/.classpath
+++ b/RESTfulExample/.classpath
@@ -21,5 +21,6 @@
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/AxisJar.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/org.libertya.ws"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/LibertyaWS.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/OXP.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
