sin generacion de linea de factura cuando el precio no esta informada-backup DB

--- a/RESTfulExample/src/main/resources/config.properties
+++ b/RESTfulExample/src/main/resources/config.properties
@@ -1,2 +1,4 @@
-#url=http://localhost:82/axis/services/LibertyaWS
-url=http://200.125.78.99/axis/services/LibertyaWS
+#URL LOCAL
+url=http://localhost:82/axis/services/LibertyaWS
+#URL NAVICON
+#url=http://200.69.247.24:81/axis/services/LibertyaWS
